--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,7 @@ button {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 50px 0px;
+  margin: 50px 0pfx;
 }
 .navbar .nav-logo {
   width: 50%;
