--- a/media-queries/media-query.css
+++ b/media-queries/media-query.css
@@ -35,19 +35,30 @@
   .explore-section .search-boxes button {
     width: 255px;
   }
+  /* explore section ends  */
+
+  /* popular tour section starts  */
+  .popular-tours {
+    flex-direction: column;
+    padding: 20px;
+  }
+  .popular-tours img {
+    width: 100%;
+  }
 }
-/* explore section ends  */
+/* popular tour section ends */
 
 /* medium and desktop devices(600-992px)  */
 
 @media screen and (min-width: 600px) and (max-width: 992px) {
+  /* navbar section  */
   .navbar {
     padding: 20px;
   }
   .nav-items {
     font-size: 0.1em;
   }
-
+  /* explore section  */
   .explore-section {
     padding: 32px 24px;
     margin: 20px;
@@ -57,5 +68,28 @@
   }
   .explore-section .search-boxes button {
     width: 100px;
+  }
+  /* popular tour section  */
+  .popular-tours {
+    padding: 20px;
+    gap: 5px;
+    font-size: 30px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .popular-tours p {
+    text-overflow: ellipsis;
+    font-size: 10px;
+  }
+  .popular-tours .tour-details :not(:last-child) {
+    margin-bottom: 0px;
+  }
+  .popular-tours .tour-details ul {
+    padding: 10px;
+  }
+  .popular-tours .tour-details img {
+    width: 300px;
+    height: 300px;
   }
 }
