--- a/media-queries/media-query.css
+++ b/media-queries/media-query.css
@@ -85,6 +85,23 @@
     margin-bottom: 16px;
   }
   /* why-choose section ends */
+
+  /* deal-discount section starts  */
+  .deal-discount {
+    padding: 0 20px;
+  }
+  .deal-discount .image {
+    width: 100%;
+    height: 550px;
+    border-radius: 16px;
+    justify-content: center;
+  }
+  .deal-discount .float-card {
+    width: 303px;
+    height: 400px;
+  }
+
+  /* deal-discount section ends */
 }
 
 /* medium and desktop devices(600-992px)  */
