--- a/media-queries/media-query.css
+++ b/media-queries/media-query.css
@@ -49,6 +49,10 @@
     flex-direction: column;
     padding: 20px;
   }
+  .popular-tours img {
+    width: 100%;
+    height: 335px;
+  }
 
   /* popular tour section ends */
   /* destination section starts  */
@@ -102,6 +106,10 @@
   }
 
   /* deal-discount section ends */
+
+  /* simple place section starts */
+
+  /* simple place section ends */
 }
 
 /* medium and desktop devices(600-992px)  */
