footer section mobile responsive finished

--- a/media-queries/media-query.css
+++ b/media-queries/media-query.css
@@ -117,6 +117,15 @@
   }
 
   /* newsletter-section ends  */
+  /* footer styles starts  */
+
+  footer {
+    padding: 30px;
+  }
+  footer .nav-logo img {
+    width: 28px;
+  }
+  /* footer styles ends */
 }
 
 /* medium and desktop devices(600-992px)  */
