--- a/styles/style.css
+++ b/styles/style.css
@@ -388,7 +388,7 @@ button {
   height: 100px;
   width: 100%;
   padding: 20px;
-  border-radius: 10%;
+  border-radius: 5px;
   font-size: 30px;
 }
 .my-extra-section .live-chat button {
