--- a/media-queries/media-query.css
+++ b/media-queries/media-query.css
@@ -96,13 +96,14 @@
   }
   .deal-discount .image {
     width: 100%;
-    height: 550px;
+    height: 600px;
     border-radius: 16px;
     justify-content: center;
   }
   .deal-discount .float-card {
+    transform: translateY(-30px);
     width: 303px;
-    height: 420px;
+    height: 450px;
   }
 
   /* deal-discount section ends */
