--- a/media-queries/media-query.css
+++ b/media-queries/media-query.css
@@ -137,8 +137,12 @@
     margin: 0;
     padding: 0px;
   }
+  footer .nav-logo h1 {
+    margin-top: 40px;
+  }
   footer .nav-logo img {
     width: 28px;
+    margin-top: 30px;
   }
   /* footer styles ends */
 }
