footer section padding top and bottom added

--- a/styles/style.css
+++ b/styles/style.css
@@ -429,7 +429,7 @@ footer {
   padding: 110px 335px;
   text-align: center;
   margin: 0;
-  padding: 0;
+  padding: 60px 0px;
   width: 100%;
   box-sizing: content-box;
 }
